Widen the main menu to stop MM title wrapping.

--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -7,7 +7,7 @@
     .navbar-nav {
         border-radius: .25rem;
         border: 1px solid $border-light;
-        width: 295px;
+        width: 305px;
         background-color: $dark-grey;
         color: $hilight;
         padding: 8px;
